--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
         "start": "tsdx watch",
         "build": "tsdx build",
         "test": "tsdx test --passWithNoTests",
+        "test:watch": "tsdx test --watch",
         "lint": "tsdx lint",
         "prepare": "tsdx build",
         "size": "size-limit",
         "analyze": "size-limit --why"
+    },
+    "jest": {
+        "moduleNameMapper": {
+            "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+            "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+        }
     },
     "peerDependencies": {
         "react": ">=16"
@@ -47,17 +54,38 @@
         }
     ],
     "devDependencies": {
-        "@size-limit/preset-small-lib": "^11.1.6",
-        "@types/react": "^19.0.2",
-        "@types/react-dom": "^19.0.2",
-        "husky": "^9.1.7",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0",
-        "size-limit": "^11.1.6",
-        "tsdx": "^0.14.1",
-        "tslib": "^2.8.1",
-        "typescript": "^3.9.10",
+        "@types/react-test-renderer": "^17.0.1",
+        "@babel/preset-env": "^7.15.6",
+        "@babel/preset-react": "^7.14.5",
+        "@rollup/plugin-image": "^2.1.1",
+        "@size-limit/preset-small-lib": "^5.0.5",
+        "@types/react": "^17.0.26",
+        "@types/react-dom": "^17.0.9",
+        "babel-jest": "^27.2.4",
+        "husky": "^7.0.2",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^27.2.4",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-test-renderer": "^17.0.2",
         "rollup-plugin-postcss": "^4.0.1",
-        "@rollup/plugin-image": "^2.1.1"
+        "size-limit": "^5.0.5",
+        "tsdx": "^0.14.1",
+        "tslib": "^2.3.1",
+        "typescript": "^4.4.3"
+    },
+    "repository": {
+        "url": "https://github.com/ArielFerreiro/adfd-prod-card",
+        "type": "git"
+    },
+    "homepage": "https://ariel-ferreiro.web.app/",
+    "keywords": [
+        "product",
+        "card",
+        "ariel",
+        "ferreoiro"
+    ],
+    "dependencies": {
+        "@types/react-test-renderer": "^19.0.0"
     }
 }
